--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -220,10 +220,6 @@
 							</div>
 
 							<div class="panel-body">
-								<a href="/kategoriler/dersnotu">Ders Notları </a>
-							</div>
-
-							<div class="panel-body">
 								<a href="/kategoriler/ozelders">Özel Ders </a>
 							</div>
 
@@ -989,20 +985,7 @@
 
 									<% end %>
 								</ul>
-								<ul>
-									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/9.jpg" alt="img09"> <h4>Casual</h4> </a>
-									</li>
-									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/10.jpg" alt="img10"> <h4>Luxury</h4> </a>
-									</li>
-									<li>
-										<a href="#"> <img
-										src="resources/plugins/ItemSlider/images/11.jpg" alt="img11"> <h4>Sport</h4> </a>
-									</li>
-								</ul>
+								
 								<ul>
 									<li>
 										<a href="#"> <img
@@ -1022,8 +1005,7 @@
 									</li>
 								</ul>
 								<nav>
-									<a href="#">İKİNCİ EL</a><a href="#">EV ARKADAŞI</a><a
-									href="#">EV İLANI</a><a href="#">ÖZEL DERS</a>
+									<a href="#">İKİNCİ EL</a><a href="#">EV ARKADAŞI</a><a href="#">ÖZEL DERS</a>
 
 								</nav>
 							</div>
@@ -1260,21 +1242,7 @@
 									</ul>
 								</li>
 
-								<li class="dropdown">
-									<a href="#" id="myTabDrop1"
-									class="dropdown-toggle" data-toggle="dropdown">Ders Notu <b
-									class="caret"></b> </a>
-									<ul class="dropdown-menu" role="menu"
-									aria-labelledby="myTabDrop1">
-										<li>
-											<a href="#enguvenilirsaticilar-dersnotu" tabindex="-1"
-											data-toggle="tab">En Güvenilir Satıcılar</a>
-										</li>
-										<li>
-											<a href="#enyakindaolansaticilar-dersnotu"
-											tabindex="-1" data-toggle="tab">En Yakında Olan Satıcılar</a>
-										</li>
-									</ul>
+							
 								<li class="dropdown">
 									<a href="#" id="myTabDrop4"
 									class="dropdown-toggle" data-toggle="dropdown">Özel Ders <b
@@ -1822,18 +1790,7 @@
 
 								</div>
 
-								<div class="tab-pane fade" id="enyakindaolansaticilar-dersnotu">
-
-									<h2 style="text-align: center; margin-bottom: 30px;">En
-									Yakındaki Ders Notu Satıcıları</h2>
-
-									<div class="row">
-
-										&nbsp;&nbsp;&nbsp;&nbsp;Bu hizmet yakında aktif olacaktır.Anlayışınız için teşekkür ederiz :)
-
-									</div>
-
-								</div>
+								
 
 								<div class="tab-pane fade" id="enguvenilirozelders">
 
