--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -172,23 +172,23 @@
 											<h4>A-H</h4>
 											<ul>
 												<li>
-													<a href="#">Beyaz Eşya</a>
+													<a href="/kategoriler/ikincielilan/beyazesya">Beyaz Eşya</a>
 												</li>	
 												
 												<li>
-													<a href="#">Ders Notu</a>
+													<a href="/kategoriler/ikincielilan/dersnotu">Ders Notu</a>
 												</li>	
 												
 												<li>
-													<a href="#">Elektronik</a>
+													<a href="/kategoriler/ikincielilan/elektronik">Elektronik</a>
 												</li>	
 												
 												<li>
-													<a href="#">Ev Dekorasyonu</a>
+													<a href="/kategoriler/ikincielilan/evdekorasyonu">Ev Dekorasyonu</a>
 												</li>	
 												
 												<li>
-													<a href="#">Giyim</a>
+													<a href="/kategoriler/ikincielilan/giyim">Giyim</a>
 												</li>	
 												
 												
@@ -198,17 +198,17 @@
 											<h4>H-P</h4>
 											<ul>
 												<li>
-													<a href="#">Kırtasiye</a>
+													<a href="/kategoriler/ikincielilan/kirtasiye">Kırtasiye</a>
 													
 												</li>	
 												
 												<li>
-													<a href="#">Mutfak Eşyaları</a>
+													<a href="/kategoriler/ikincielilan/mutfakesyalari">Mutfak Eşyaları</a>
 													
 												</li>	
 												
 												<li>
-													<a href="#">Müzik Aletleri</a>
+													<a href="/kategoriler/ikincielilan/muzikaletleri">Müzik Aletleri</a>
 													
 												</li>	
 												
@@ -219,12 +219,12 @@
 											<h4>P-Z</h4>
 											<ul>
 												<li>
-													<a href="#">Vasıta</a>
+													<a href="/kategoriler/ikincielilan/vasita">Vasıta</a>
 													
 												</li>	
 													
 												<li>	
-													<a href="#">Diğer</a>
+													<a href="/kategoriler/ikincielilan/diger">Diğer</a>
 												</li>
 												
 											</ul>
@@ -237,61 +237,7 @@
 								<a href="#">Ev Arkadaşı</a>
 								
 							</li>
-							<li>
-								<a href="#">Ders Notları</a>
-								<div class="cbp-hrsub">
-									<div class="cbp-hrsub-inner">
-										<div>
-											<h4>Temel Bilimler</h4>
-											<ul>
-												<li>
-													<a href="#">Matematik</a>
-												</li>
-												
-												<li>
-													<a href="#">Fizik</a>
-												</li>
-												
-												
-												<li>
-													<a href="#">Kimya</a>
-												</li>
-												
-												
-												<li>
-													<a href="#">Biyoloji</a>
-												</li>
-												
-
-												
-											</ul>
-											
-										</div>	
-											
-										<div>
-											<h4>Mühendislik</h4>
-											<ul>
-												<li>
-													<a href="#">Genel Mühendislik Ders Notları</a>
-												</li>
-												
-											</ul>
-											
-										</div>
-										
-										<div>
-											<h4>Eğitim Bilimleri</h4>
-											<ul>
-												<li>
-													<a href="#">Genel Eğitim Bilimleri Ders Notları</a>
-												</li>
-												
-											</ul>
-											
-										</div>
-									</div><!-- /cbp-hrsub-inner -->
-								</div><!-- /cbp-hrsub -->
-							</li>
+							
 							<li>
 								<a href="#">Özel Ders</a>
 								<div class="cbp-hrsub">
