--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -335,7 +335,7 @@
 										</div>
 									</div>
 									<div class="panel-footer">
-										<a data-original-title="Mesajlarım"
+										<a href="/mesajlarim" data-original-title="Mesajlarım"
 										data-toggle="tooltip" type="button"
 										class="btn btn-sm btn-primary"><i
 										class="glyphicon glyphicon-envelope"></i></a><span
