--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -583,6 +583,7 @@
 
 					<%= form_for :advert, :url => 'privatelesson' , :method => :post , :html => {
 					:class => 'form-basic ikinciel' , :id => 'ozeldersform',
+					:multipart => true,
 					:style => 'display:none;'
 					} do |t| %>
 
