--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -247,21 +247,21 @@
 											<h4>Temel Bilimler</h4>
 											<ul>
 												<li>
-													<a href="#">Matematik</a>
+													<a href="/kategoriler/ozelders/matematik">Matematik</a>
 												</li>
 												
 												<li>
-													<a href="#">Fizik</a>
-												</li>
-												
-												
-												<li>
-													<a href="#">Kimya</a>
+													<a href="/kategoriler/ozelders/fizik">Fizik</a>
 												</li>
 												
 												
 												<li>
-													<a href="#">Biyoloji</a>
+													<a href="/kategoriler/ozelders/kimya">Kimya</a>
+												</li>
+												
+												
+												<li>
+													<a href="/kategoriler/ozelders/biyoloji">Biyoloji</a>
 												</li>
 												
 
@@ -274,7 +274,7 @@
 											<h4>Mühendislik</h4>
 											<ul>
 												<li>
-													<a href="#">Genel Mühendislik Özel Ders İlanları</a>
+													<a href="/kategoriler/ozelders/genelmuhendislik">Genel Mühendislik Özel Ders İlanları</a>
 												</li>
 												
 											</ul>
@@ -285,7 +285,7 @@
 											<h4>Eğitim Bilimleri</h4>
 											<ul>
 												<li>
-													<a href="#">Genel Eğitim Bilimleri Özel Ders İlanları</a>
+													<a href="/kategoriler/ozelders/genelegitimbilimleri">Genel Eğitim Bilimleri Özel Ders İlanları</a>
 												</li>
 												
 											</ul>
